--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  width: 100%;
   background-color: black;
   display: flex;
   flex-direction: row;
@@ -6,6 +7,8 @@
   align-items: center;
   height: 90px;
   padding-left: 15px;
+  position: fixed;
+  z-index: 100;
 }
 
 .rose_logo {
