--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 * {
   margin: 0;
